Nav bar align fixed, but problems with links.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 #nav {
-    text-align: end;
+    display: grid;
+    justify-content: end;
+    align-items: center;
+    grid-auto-flow: column;
+    } 
+    
 }
+
 
 #user-icon {
     border-radius: 50%;
